--- a/Designa/Views/Shared/_Layout.cshtml
+++ b/Designa/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/jqueryui/jquery-ui.min.js"></script>
+    <script src="~/lib/jquery.inputmask/jquery.inputmask.min.js"></script>
     <header>
         <nav class='navbar navbar-expand border-bottom py-2' data-type='fixednav'>
             <div class='container'>
@@ -69,7 +70,7 @@
 
     <footer class="border-top footer text-muted not-print">
         <div class="container">
-            &copy; 2023 - Designa - <a asp-area="" asp-controller="Publicacao" asp-action="Index">Publicação</a>
+            &copy; 2023 - Wellington Lacerda - <a asp-area="" asp-controller="Publicacao" asp-action="Index">Publicação</a>
         </div>
     </footer>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.js"></script>
