--- a/Designa/Views/Reuniao/Index.cshtml
+++ b/Designa/Views/Reuniao/Index.cshtml
@@ -65,8 +65,8 @@
                         <input type="hidden" name="[@contReuniao].Partes[@contPartes].ReuniaoId" value="@parte.ReuniaoId" />
                         <input type="hidden" name="[@contReuniao].Partes[@contPartes].PublicadorParteId" value="@parte.PublicadorParteId" />
 
-                        @* <input type="hidden" name="[@contReuniao].Partes[@contPartes].PublicadorParte.ParteId" value="@parte.PublicadorParte?.ParteId" />
-                        <input type="hidden" name="[@contReuniao].Partes[@contPartes].PublicadorParte.Id" value="@parte.PublicadorParte?.Id" /> *@
+                        @* <input type="hidden" name="[@contReuniao].Partes[@contPartes].PublicadorParte.ParteId" value="@parte.PublicadorParte?.ParteId" /> *@
+                        <input type="hidden" name="[@contReuniao].Partes[@contPartes].PublicadorParte.Id" value="@parte.PublicadorParte?.Id" />
 
                         if (parte.Numero == 0)
                             cont++;
