--- a/Designa/Views/_ViewImports.cshtml
+++ b/Designa/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using X.PagedList.Mvc.Core;
 @using Newtonsoft.Json;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
